--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,69 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 捷克-1.93MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-5.72MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-840.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-438.2KB/s(Youtube:不良林), server: 36.134.116.212, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 0489fad1-e23d-4f47-b759-ddc4d4122498}
   - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.03MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-1.39MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.36MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: hk3.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
   - {name: 🇨🇳 台湾-3.31MB/s(Youtube:不良林), server: bpjcjapan.loseyourip.com, port: 12342, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjcjapan.loseyourip.com}}
   - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-829.6KB/s(Youtube:不良林), server: 72.140.224.197, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-923.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: vfly1.win, port: 443, type: vmess, uuid: e45b5aac-b852-4055-cbbf-d366499e53e8, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly1.win}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
-      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-840.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-438.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
       - 🇨🇳 台湾-3.31MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
