--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: hk3.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: d6c81482-2993-419c-a602-df2f912ea4ba, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 捷克-1.93MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: 36.134.116.212, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 0489fad1-e23d-4f47-b759-ddc4d4122498}
   - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: hk6.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
-  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: hk5.leo222.com, port: 30001, type: ssr, cipher: chacha20-ietf, password: 0gIrPaom, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 6509:ESKGKl, obfs-param: 2cff36509.microsoft.com}
-  - {name: 🇺🇸 美国-923.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-1.05MB/s(Youtube:不良林), server: vfly1.win, port: 443, type: vmess, uuid: e45b5aac-b852-4055-cbbf-d366499e53e8, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly1.win}}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-279.3KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-829.6KB/s(Youtube:不良林), server: 72.140.224.197, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-319.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 42167, type: trojan, password: 644c9b90-3bf9-4d95-a837-ce83c31ed839, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-257.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-271.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 捷克-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-923.8KB/s(Youtube:不良林)
-      - 未知国家-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇫🇷 法国-279.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-271.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
